// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      tomato sauce
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      mustard
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      mayo
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ccc",
          "borderRadius": 16,
          "flex": 1,
          "height": 32,
          "margin": 4,
          "minWidth": 100,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      placeholder="testy text"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "flex": 1,
            "fontSize": 13,
            "height": 32,
            "margin": 0,
            "padding": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
          },
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="monkey gland sauce"
    />
  </View>
</View>
`;

exports[`Tags should render props correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      tomato sauce
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      mustard
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#e0e0e0",
        "borderRadius": 16,
        "height": 32,
        "justifyContent": "center",
        "margin": 4,
        "opacity": 1,
        "paddingLeft": 12,
        "paddingRight": 12,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 13,
          },
          undefined,
        ]
      }
    >
      mayo
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#ccc",
          "borderRadius": 16,
          "flex": 1,
          "height": 32,
          "margin": 4,
          "minWidth": 100,
        },
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      onSubmitEditing={[Function]}
      style={
        Array [
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "flex": 1,
            "fontSize": 13,
            "height": 32,
            "margin": 0,
            "padding": 0,
            "paddingLeft": 12,
            "paddingRight": 12,
          },
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="monkey gland sauce"
    />
  </View>
</View>
`;
